# brbot

./: .gitignore  brbot.cabal  stack.yaml
src/: Lib.hs
