name:                brbot
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/brbot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       , websockets
                       , http-conduit
                       -- needed for ResourceT
                       , resourcet
                       , transformers
                       , bytestring
                       , aeson
                       , text
                       , network
                       , mtl
                       , split
                       , wuss == 1.*
                       , sqlite-simple
                       , errors
  default-language:    Haskell2010

executable brbot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brbot
  default-language:    Haskell2010

test-suite brbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , brbot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/brbot
